Avoid images overflowing

--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,7 @@ body {
 
 img {
   width: auto;
+  max-width: 100%;
 }
 
 pre {
